tests/snapshots/snapshots__interpreter@eff_poly_fn_arg.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/eff_poly_fn_arg.pr
---
[(0, 10), (1, 20), (2, 30)]
cell read
cell read
cell read
[1, 2, 3]
=> ()
