tests/snapshots/snapshots__interpreter@eff_poly_handler_install.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/eff_poly_handler_install.pr
---
((), 3)
=> ()
