tests/snapshots/snapshots__interpreter@eff_row_forward.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/eff_row_forward.pr
---
6
42
=> ()
