tests/snapshots/snapshots__interpreter@eff_row_unwitnessed.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/eff_row_unwitnessed.pr
---
4
=> ()
