tests/snapshots/snapshots__interpreter@eff_two_handlers.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/eff_two_handlers.pr
---
33
=> ()
