tests/snapshots/snapshots__interpreter@effects_demo.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/effects_demo.pr
---
22
-1
=> ()
