tests/snapshots/snapshots__interpreter@effop_tax.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/effop_tax.pr
---
200
=> ()
