tests/snapshots/snapshots__interpreter@errors.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/errors.pr
---
7
-1
100
42
300
=> ()
