tests/snapshots/snapshots__interpreter@factorial.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/factorial.pr
---
5040
=> ()
